Basic_node: update MoexExchangeData.java